--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -61,3 +61,15 @@ li.sideNav {
 .add-substract-days {
   text-align: center;
 }
+
+.hidden {
+  display: none;
+}
+
+.marginForChildrenEdit {
+  margin-left: 132px;
+}
+
+.editTextArea {
+  margin-left: 28px;
+}
