--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,11 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class='navbar-header'>
       <span class='navbar-brand'>Welcome <%= @user.first_name %></span>
     </div>
     <div class='collapse navbar-collapse'>
       <ul class='nav navbar-nav'>
+
         <li><a href="#" class='navLink' id='home'>Home</a></li>
         <li><a href="#" class='navLink' id="activity">Activity</a></li>
         <li><a href="#" class='navLink' id="settings">Settings</a></li>
