--- a/app/assets/stylesheets/get_started.css.scss
+++ b/app/assets/stylesheets/get_started.css.scss
@@ -2,6 +2,37 @@ h3 {
   text-align: center;
 }
 
+#backButton {
+  margin-right: 10em;
+}
+
+.formHolder {
+}
+
+.before-and-after {
+  text-align: center;
+}
+
+.btn-gmail {
+  background: #DA5D26;
+  color: white;
+}
+
+.btn-twitter {
+  background: #6DC5B8;
+  color: white;
+}
+
+.add-supporter {
+  width: 49%;
+  float: right;
+}
+
+.add-trigger {
+  width:50%;
+  float: left;
+}
+
 .get-started-background {
   background: #9DD3F3;
   position:absolute;
@@ -19,6 +50,7 @@ h3 {
   width:100%;
   border: 1px solid black;
 }
+
 .step {
   width:  33%;
 }
@@ -35,7 +67,6 @@ h3 {
 
 .formHolder {
   display: inline-block;
-  height: 240px;
   width: 100%;
 }
 
@@ -55,6 +86,17 @@ h3 {
 li.gstart:nth-child(even) {
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.access-buttons {
+  width: 35%;
+  display: inline-block;
+  float: right;
+}
+
+.step-description {
+  width: 50%;
+  display: inline-block;
 }
 
 li.gstart {
@@ -102,22 +144,9 @@ p {
   height: 16px;
 }
 
-.fa-google {
-  font-size: 30px;
-}
-
-.fa-twitter {
-  text-decoration: none;
-  font-size: 30px;
-}
-
 .authLink {
   font-size: 18px;
   vertical-align: middle;
-}
-
-.marginLeftForNav {
-  margin-left: 151px;
 }
 
 .marginForChildren {
@@ -134,7 +163,9 @@ p {
 }
 
 textarea {
-  border-radius: 5px;
+  border-radius: 2px;
+  height: 100px;
+  width: 100%;
 }
 
 select {
@@ -158,7 +189,43 @@ select {
   width: 20%;
 }
 
+.step-container {
+  padding: 75px 50px 75px;
+  background: rgba(255, 255, 255, .55);
+  border-radius: 10px;
+  margin: 10% auto;
+  height: 404px;
+  .form-group {
+    display:block;
+  }
+  input {
+    height: 40px;
+    padding: 10px 10px 10px 10px;
+  }
+  textarea {
+    border-radius: 2px;
+    height: 110px;
+    width: 300px;
+    border: 1px solid #909090;
+    padding: 5px 10px;
+  }
 
+  :-moz-placeholder { /* Firefox 18- */
+     font-size: 17px;
+  }
+
+  ::-moz-placeholder {  /* Firefox 19+ */
+     font-size: 17px;
+  }
+
+  :-ms-input-placeholder {
+     font-size: 17px;
+  }
+  ::-webkit-input-placeholder {
+     font-size: 17px;
+  }
+
+}
 
 
 
