--- a/app/assets/stylesheets/triggers.css.scss
+++ b/app/assets/stylesheets/triggers.css.scss
@@ -3,11 +3,35 @@
 } */
 
 #triggerMenu {
-	display:inline-block;
+  width: 140px;
+  color: white;
+  background: #DA5D26;
+  border: 0;
+  border-radius: 1px;
+  height: 25px;
+  display: inline-block;
+  float: left;
+  margin-right: 35px;
 }
 
 .redSquare {
   height: 20px;
   width: 20px;
   background-color: red;
+}
+
+#incDays {
+  background: white;
+  padding: 7px 10px;
+  border: 1px solid #09090;
+  border-radius: 50%;
+  margin: 0px 15px;
+  color: #606060;
+}
+
+.add-subtract-button {
+  border-radius: 50%;
+  background: #FBAF3F;
+  padding: 6px 8px;
+  color: white;
 }
